2007-03-12  Richard Dale  <rdale@foton.es>

	* When the access level of an overriden method is changed, use 'new' in
	  the method declaration allow the change, rather than always making
	  these methods public
	* Allow covariant return types as C# has them
	* Make some classes non-abstract by adding the missing methods
	* Fix code generation of QApplication.Exec() so apps don't crash on exit

2007-03-11  Richard Dale  <rdale@foton.es>

	* For pure virtual methods with optional arguments, only translate the
	  longest version to a C# abstract method. Otherwise, it was necessary
	  to add extra methods in subclasses that wouldn't be needed in the C++
	  equivalent code. Fixed example code that needed to do that.

2007-03-08  Richard Dale  <rdale@foton.es>

	* Improved the code generation for overriden methods and they are
	  now labelled 'virtual' or 'override' where appropriate, rather than
	  as 'new'
	* Classes with pure virtual methods are now 'abstract' as are the pure
	  virtual methods.
	* Made the code generated for Q_PROPERTIES shorter for clarity
	* Fixed some compile errors in the examples as a result of the above 
	  changes
	* The tutorial application t14 now seg faults on exit
	* Pure virtual protected methods such as 
	  QSyntaxHighlighter.HighlightBlock() are no longer omitted from the
	  generated code

2007-03-07  Richard Dale  <rdale@foton.es>

	* Made the simpletreemodel example use the csrcc resource compiler
	* Removed the 'qt_metacall NOT CONVERTED' messages from the sources as
	  were just noise
	* Don't generate destructors for the Qt class as it only has static 
	  methods

2007-03-06  Richard Dale  <rdale@foton.es>

	* A GCHandle was being used to hold the 'internalPointer' value in a 
	  QModelIndex. A new one was being allocated everytime a new index
	  was created by QAbstractItemModel.CreateIndex(), which meant that
	  different GCHandles could hold the same underlying 'Target' instance.